Fixing spacing and moving the images to the correct area

--- a/src/Projects/Projects.scss
+++ b/src/Projects/Projects.scss
@@ -5,7 +5,7 @@
 //   background-position: center;
 //   background-repeat: no-repeat;
   display: flex;
-  margin-bottom: 10%;
+  margin-bottom: 7%;
   width: auto;
   justify-content: center;
 }
